[tool.poetry]
name = "pdf-converter-app"
version = "0.1.0"
description = "PDF to Markdown Converter with Summarization"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pypdfium2 = "^4.30.0"
marker-pdf = "^0.2.16"
pillow = "^10.4.0"
streamlit = "^1.29.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pdf-converter-app = "app:main"  # Replace 'app' with the name of your Streamlit app file

[tool.api]
# Add details for your hosted API here, if applicable
# Example:
# endpoint = "https://your-api-endpoint.com"
# key = "YOUR_API_KEY"
