[tool.poetry]
name = "pdf-converter-app"
version = "0.1.0"
description = "PDF to Markdown Converter with Summarization"
authors = ["Your Name <your.email@example.com>"]

[tool.poetry.dependencies]
python = "^3.9,<3.13"
pypdfium2 = "^4.30.0"
marker-pdf = "^0.2.16"
pillow = "^10.4.0"
streamlit = "^1.29.0"
scikit-learn = "^1.4.2"
pydantic = "^2.4.2"
pydantic-settings = "^2.0.3"
transformers = "^4.36.2"
numpy = "^1.26.1"
python-dotenv = "^1.0.0"
torch = "^2.2.2"
tqdm = "^4.66.1"
tabulate = "^0.9.0"
ftfy = "^6.1.3"
texify = "^0.1.10"
rapidfuzz = "^3.8.1"
surya-ocr = "^0.4.15"
filetype = "^1.2.0"
regex = "^2024.4.28"
pdftext = "^0.3.10"
grpcio = "^1.63.0"
requests = "*"
openai = "*"
datasets = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
pdf-converter-app = "app:main"  # Replace 'app' with the name of your Streamlit app file

[tool.api]
# Add details for your hosted API here, if applicable
# Example:
# endpoint = "https://your-api-endpoint.com"
# key = "YOUR_API_KEY"
